[package]
name = "simple-stock-calculator"
version = "1.0.1"
edition = "2024"
description = "A simple stock calculator(calculating recovery rate)"
license = "MIT"
authors = ["omelet3032@gmail.com"]
homepage = "https://github.com/omelet3032/simple-stock-calculator"
repository = "https://github.com/omelet3032/simple-stock-calculator"

[dependencies]
proptest = "1.0.0"


[package.metadata.rpm]
package = "simple-stock-calculator"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
simple-stock-calculator = { path = "/usr/bin/simple-stock-calculator" }
